# LER-IR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grammar  ler-ir-impl-notes.txt
docs/: INTERNALS.md  LERDialect.md  LERPasses.md  USAGE.md  performance-analysis.md
include/: CMakeLists.txt
include/ler-ir/: CMakeLists.txt  CommonUtils.h  LERCommonUtils.h  LERFrontend.h  LERTokenDefs.h  LERUtils.h  Passes.h  Passes.td
include/ler-ir/Analysis/: Misc.h
include/ler-ir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/ler-ir/IR/: CMakeLists.txt  LERBase.td  LERDialect.h  LERDialect.td  LEROps.td
include/ler-ir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
optimizer/: DirectiveListener.java  Glory.java  GloryBaseListener.java  GloryBaseVisitor.java  GloryLexer.java  GloryListener.java  GloryParser.java  GloryVisitor.java  LERListener.java  LERStatement.java
scripts/: full-test  ler-full  notation_converter.py
src/: CMakeLists.txt  LERASTPrinters.cpp  LERASTStrings.cpp  LERCodeGenerators.cpp  LERFrontend.cpp  LERMain.cpp  LERUtils.cpp  main.cpp
src/Analysis/: CMakeLists.txt  Misc.cpp
src/Conversion/: CMakeLists.txt  ConvertArrayAccToMemref.cpp  ConvertForLoopsToAffine.cpp  ConvertLoopsToAffineSCF.cpp  ConvertResultToStore.cpp  ConvertToArith.cpp  ConvertToLLVM.cpp  ConvertWhileLoopsToSCF.cpp
src/IR/: CMakeLists.txt  LERDialect.cpp
src/Transforms/: CMakeLists.txt  InjectInductionVars.cpp
test/: 10_ssym.in_0.ler  10_ssym.in_1.txt  1_example1.in.ler  2_example2.in.txt  3_bgd.in_0.ler  3_bgd.in_1.ler  4_ccsd_onesize.in.ler  5_ccsd_multisize.in.ler  7_fuse.in_0.ler  7_fuse.in_1.ler  8_pde.in.ler  9_priv2.in_0.ler  9_priv2.in_1.ler  case.c  case.ler  case1.c  case1.ler  case10.ler  case2.c  case2.txt  case3.1.txt  case3.4.txt  case3.5.txt  case3.6.txt  case4.1.c  case4.1.ler  case4.2.c  case4.2.txt  case4.3.c  case4.3.ler  case5.c  case5.ler  case7.c  case7.txt  case8-fused.c  case8-fused.txt  case9.ler  cat1-loop-inv-expr.mlir  exp_case.c  exp_case.ler  (+1 more)
test/test_3/: case3.2.txt  case3.3.txt
test/unsupported/: 6_fmri.in.ler  case10.c  case9.c  unsupported.txt
